k8s/react-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-react-app-service
  namespace: react-app
spec:
  type: ClusterIP
  selector:
    app: my-react-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 80
