k8s/react-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-react-app-ingress
  namespace: react-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: my-react-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-react-app-service
                port:
                  number: 3000
